deployment/kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: appointment-bot
  labels:
    name: appointment-bot
    environment: prod
